<resources>
    <string name="app_name">Crieta Wow Philippines App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtTitle">South Cotabato</string>
    <string name="txtScotabatoD">South Cotabato is a province of the Philippines located in the SOCCSKSARGEN region in Mindanao. Its capital is Koronadal City, and it borders Sultan Kudarat to the north and west, Sarangani to the south and east, and Davao del Sur to the east. To the southeast lies Sarangani Bay.</string>
    <string name="imgSouthCotabato">Image of South Cotabato</string>
    <string name="txtHotel">Greenleaf Hotel Gensan</string>
    <string name="imgHotel">Images of Greenleaf</string>
    <string name="descHotel">Greenleaf Hotel is the only 4-star hotel in General Santos and is the most elegant hotel in Mindanao. By embodying Western comfort and Filipino hospitality, they give the best of both worlds.  They offer the most conducive working environment in Gensan with their business center where clients can stay connected with seamlessly fast Internet. Their grand ballrooms and multi-function rooms are the ultimate venues for conventions and personal events.</string>
    <string name="txtHotel1">FB Hotel</string>
    <string name="imgHotel1">Image of FB Hotel</string>
    <string name="descHotel1">Designed for comfort, selected guestrooms offer television LCD/plasma screen, linens, towels, internet access – wireless (complimentary), non smoking rooms to ensure a restful night. Entertain the hotel\'s recreational facilities, including fitness center, indoor pool, massage, pool (kids).</string>
    <string name="txtTspots">Lake Sebu</string>
    <string name="imgTspots">Image of Lake Sebu</string>
    <string name="descTspots">Lake Sebu is one of the Philippines\' most important watersheds and a major provider of irrigation to the provinces of Sultan Kudarat and South Cotabato. It is located in the ancestral domain of the T\'boli and Ubo tribes. The DOT has promoted the lake as one of the prime eco-tourism destinations in Mindanao.</string>
    <string name="txtTspots1">Lake Holon</string>
    <string name="imgTspots1">Image of Lake Holon</string>
    <string name="descTspots1">Deep in the hinterlands of South Cotabato, where the ethnic tribe of the T’boli people resides, sits a place filled with wonder and surreal beauty. The uncharted terrains, marred by certain ruggedness, have been trekked by adventure-seekers who are in search of new places to marvel at. There, nestled at the crater of Mt. Parker, is Lake Holon, whose clear waters and surrounding green pastures bring forth a feeling of peace and tranquility to every visitor who dared to climb its trails.</string>
    <string name="txtmall">SM City General Santos</string>
    <string name="imgmall">Image of SM General Santos</string>
    <string name="descmall">SM City General Santos is located on the highly urbanized center of South Cotabato province. Situated on a 6 hectare corner lot along Santiago and San Miguel streets in downtown area. It features a total floor area of 125,245 sqm with three (3) levels of mall with cinema, foodcourt and five (5) floors parking building.</string>
    <string name="txtmall1">KCC Mall of Marbel</string>
    <string name="imgmall1">Image of KCC Marbel</string>
    <string name="descmall1">Koronadal Commercial Center (KCC) started in 1947 as a textile store in Koronadal City. It was the time when Koronadal was on its rapid commercialisation and became the capital of South Cotabato. It then expanded in 1989 as a supermarket and department store and branded as KCC Shopping Center.</string>
    <string name="txtHotel2">Roman Empire Panglao</string>
    <string name="imgHotel2">Image of Roman Empire Panglao</string>
    <string name="descHotel2">The Roman Empire Boutique and Wellness Hotel is a brand new Theme Hotel, inspired by the old Romans. It offers a huge 50 meter long Swimming pool with its own Island, a direct access to the pool from all Cesar Superior Rooms, a unique roman garden area with a fountain, a state of the art Dancing music fountain, a roman style restaurant and huge bar.</string>
    <string name="txtHotel3">Ecostay Panglao Hotel and Resort</string>
    <string name="imgHotel3">Image of Ecostay</string>
    <string name="descHotel3">Situated in Panglao, 3 km from Alona Beach, Ecostay Panglao Resort Hotel features accommodation with a restaurant, free private parking, a bar and a garden. Boasting a shared kitchen, this property also provides guests with a terrace. The air-conditioned rooms provide pool view and come with a desk and free WiFi.</string>
    <string name="txtTspots2">Chocolate Hills</string>
    <string name="imgTspots2">Image of Chocolate Hills</string>
    <string name="descTspots2">The Chocolate Hills are a geological formation in the Bohol province of the Philippines. There are at least 1,260 hills but there may be as many as 1,776 hills spread over an area of more than 50 square kilometres. They are covered in green grass that turns brown during the dry season, hence the name.</string>
    <string name="txtTspots3">Philippine Tarsier and Wildlife Sanctuary</string>
    <string name="imgTspots3">Image of PH Tarsier Sanctuary</string>
    <string name="imgTspots3.1">Image of PH Tarsier</string>
    <string name="descTspots3">The Tarsier Sanctuary is a large forest dedicated to the protection of tarsiers, small nocturnal primates with big, round eyes that feed primarily on insects. They usually cling to low branches or the trunks of slim trees.</string>
    <string name="txtmall2">Island City Mall</string>
    <string name="imgmall2">Image of Island City Mall</string>
    <string name="descmall2">Island City Mall is the largest shopping center in Tagbilaran city. Located opposite to Dao Public Market and Dao Intergrated Bus Terminal. Island City Mall has redefined the concept of shopping, dining, and entertainment in Bohol upon its opening in 2004. It infused lifestyle changes in the community, brought shopping into one roof, made available diverse dining options, and became an energetic events venue where people can linger and enjoy various entertainments and live performances.</string>
    <string name="txtHotel4">Solea Mactan Hotel</string>
    <string name="imgHotel4">Image of Solea Mactan</string>
    <string name="descHotel4">Solea Mactan Resort features a large salt-water outdoor infinity pool with water slides. It also features a fitness center, games room, a restaurant and private beach area. Free WiFi access is available throughout the property.</string>
    <string name="txtHotel5">Palm Grass Hotel</string>
    <string name="imgHotel5">Image of Palm Grass</string>
    <string name="descHotel5">Palm Grass Hotel, the only heritage hotel in Cebu, offers a unique approach to hospitality. It doesn\'t simply provide guests with a bed and a place to stay, but it brings them Cebu\'s history and culture. The seven-storey green hotel gives you the blueprint of Cebu\'s revolutionary history in the Spanish period - a unique blend of experience as we travel back in time when our heroes offered their lives for the freedom that is being enjoyed today.</string>
    <string name="txtTspots4">Magellans Cross</string>
    <string name="imgTspots4">Image of outside magellans cross</string>
    <string name="imgTspots4.1">Image of Inside magellans cross</string>
    <string name="descTspots4">Magellans Cross is a Christian cross planted by Portuguese and Spanish explorers as ordered by Ferdinand Magellan upon arriving in Cebu in the Philippines on 16 or 17 March 1521</string>
    <string name="txtTspots5">Fort San Pedro</string>
    <string name="imgTspots5">Image of Fort San Pedro</string>
    <string name="descTspots5">Fuerte de San Pedro is a military defense structure in Cebu, built by the Spanish under the command of Miguel López de Legazpi, first governor of the Captaincy General of the Philippines. It is located in the area now called Plaza Indepedencia, in the pier area of the city.</string>
    <string name="txtmall4">SM City Cebu</string>
    <string name="imgmall4">Image of SM Cebu</string>
    <string name="descmall4">SM City Cebu, also known locally as SM Cebu or sometimes SM Mabolo, is a large shopping mall located in Cebu City, Philippines. It is the 4th shopping mall owned and developed by SM Prime Holdings, the country\'s largest shopping mall owner and developer.</string>
    <string name="txtmall5">Ayala Center Cebu</string>
    <string name="imgmall5">Image of Ayala Cebu</string>
    <string name="descmall5">Ayala Center Cebu is a large shopping mall owned by Ayala Malls at the Cebu Business Park in Cebu City, Philippines. It is the first Ayala mall located outside of Metro Manila. It opened in November 1994, one year after their rival mall, SM City Cebu opened.</string>
    <string name="txtHotel6">Double M Hotel</string>
    <string name="imgHotel6">Image of Double M</string>
    <string name="descHotel6">Double M Hotel is a new brand of business hotel in Mindanao that caters to travelers looking for great accommodations and dining experience in a safe and secure destination, complemented with exceptional service from well-trained staff. Envisioned to highlight the beauty and emerging transformation of Mindanao, Double M Hotel is a premier choice for quality and value.</string>
    <string name="txtHotel7">Hotel Valencia</string>
    <string name="imgHotel7">Image of Hotel Valencia</string>
    <string name="descHotel7">Hotel Valencia is a great choice for accommodation when visiting Valencia (Bukidnon). The city center is merely 0.2 km away and the airport can be reached within minutes. With its convenient location, the hotel offers easy access to the city\'s must-see destinations.  At Hotel Valencia, every effort is made to make guests feel comfortable. To do so, the hotel provides the best in services and amenities. The hotel offers access to a vast array of services, including 24-hour room service, free Wi-Fi in all rooms, daily housekeeping, 24-hour front desk, car park.</string>
    <string name="txtTspots6">Monastery of the Transfiguration</string>
    <string name="imgTspots6">Image of Monastery</string>
    <string name="descTspots6">When you passes by the City of Pines in Malaybalay City, it is a must to see the well manicured landscaped of this monastery being maintained and sustained by the monks. They have Abbey Cafe almost next to the church,with a souvenirs and goodies to take home.</string>
    <string name="txtTspots7">Blue Water Cave</string>
    <string name="imgTspots7">Image of blue water</string>
    <string name="descTspots7">The “Blue Water Cave” is a natural tourist attraction hidden in the lush valley of a river that flows underground in the connecting caverns of the San Jose village here. “The color of the river water is blue all year round,” The cave\'s opening is small. At the bottom, cool and clear water accumulated.</string>
    <string name="txtmall6">Robinsons Place Valencia</string>
    <string name="imgmall6">Image of Robinsons Valencia</string>
    <string name="HotelBulacanDays">Number of days stay</string>
    <string name="HotelBulacanRoom">Total Number of room</string>
    <string name="btnButacanHotels">PAYMENT</string>
    <string name="HotelID1">Aerostop Hotel and Restaurant</string>
    <string name="Spot1">VERDIVIA FALLS</string>
    <string name="Spot2">HIKE MT. GOLA</string>
    <string name="Spot3">HIKE MT MANALMON</string>
    <string name="SpotBulacanDays">Number of days stay</string>
    <string name="SpotBulacanGuests">Total Number of guests</string>
    <string name="btnButacanSpot">PAYMENT</string>
</resources>