<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".CaviteHotelJAVA">

        <TextView
            android:id="@+id/txtHotel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Cavite Hotels"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="351dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtHotel">

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="107dp"
                android:layout_height="79dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                app:srcCompat="@drawable/one" />

            <RadioButton
                android:id="@+id/HotelID1"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:checked="true"
                android:text="One Serenata Hotel" />

            <TextView
                android:id="@+id/txtdeschotel1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:justificationMode="inter_word"
                android:text="          Situated off a busy highway, this simple hotel is 13 km from the City of Dreams Manila shopping and entertainment complex, and 14 km from Ninoy Aquino International Airport." />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="107dp"
                android:layout_height="79dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                app:srcCompat="@drawable/the" />

            <RadioButton
                android:id="@+id/HotelID2"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="The Bayleaf Cavite" />

            <TextView
                android:id="@+id/txtdeschotel2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:justificationMode="inter_word"
                android:text="          On leafy grounds off Governor’s Drive, this upmarket business hotel is 38 km from Ninoy Aquino International Airport and 46 km from Manila’s city center." />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="107dp"
                android:layout_height="79dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                app:srcCompat="@drawable/courtyard" />

            <RadioButton
                android:id="@+id/HotelID3"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="88 Courtyard Hotel" />

            <TextView
                android:id="@+id/txtdeschotel3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:justificationMode="inter_word"
                android:text="          Buzzing district with shops and ice-skating in Mall of Asia, plus waterfront restaurants and bars." />

        </RadioGroup>

        <EditText
            android:id="@+id/HotelBulacanDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/HotelBulacanDays"
            android:inputType="number"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <EditText
            android:id="@+id/HotelBulacanRoom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/HotelBulacanRoom"
            android:inputType="numberDecimal"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/HotelBulacanDays" />

        <Button
            android:id="@+id/btnButacanHotels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/btnButacanHotels"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/HotelBulacanRoom" />



    </android.support.constraint.ConstraintLayout>
</ScrollView>